--- a/code/client/src/styling/sass/components/_AdminOptions.scss
+++ b/code/client/src/styling/sass/components/_AdminOptions.scss
@@ -2,6 +2,7 @@
 
   &__list {
     display: flex;
+    font-size: 2rem;
     flex-direction: column;
   }
 }
