--- a/code/client/src/styling/sass/pages/_HomePage.scss
+++ b/code/client/src/styling/sass/pages/_HomePage.scss
@@ -3,7 +3,7 @@
   &__map {
     justify-content: space-around;
     display: flex;
-    padding-top: 2rem;
+    padding-top: 4rem;
     align-items: center;
   }
   
